overlay/test/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80              # Service port
    targetPort: 80        # Container port
    #someting
